# GDPS-Client

./: README.md  package-lock.json  package.json
src/: index.html  script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/res/: main.css
